# olist-analytics

./: .gitignore  README.md  pyproject.toml  report.py  requirements-dev.txt
configs/: default.yaml
notebooks/: report.ipynb
olist_analytics/: __init__.py  cli.py  config.py  style.py
olist_analytics/analyses/: __init__.py  section1_overview.py  section2_geography.py  section3_sellers.py  section4_payments.py  section5_categories.py
olist_analytics/loaders/: __init__.py  olist.py
olist_analytics/transforms/: __init__.py  categories.py
tests/: test_categories.py  test_config.py
